--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 hands
+modules/__pycache__/__init__.cpython-37.pyc
+modules/__pycache__/hand_funcs.cpython-37.pyc
+modules/__pycache__/helper_funcs.cpython-37.pyc
+modules/__pycache__/player_funcs.cpython-37.pyc
+modules/__pycache__/player_funcs.cpython-38.pyc
+modules/__pycache__/player_funcs.cpython-38.pyc
+modules/__pycache__/player_funcs.cpython-38.pyc
